# sa-fraud-shield

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  fix_conclusion.py  fix_notebook_imports.py  pyproject.toml
api/: main.py
api/routers/: explain.py  health.py  score.py
api/services/: model_registry.py  scorer.py
data_generation/: dataset_generator.py  graph_builder.py
data_generation/fraud_patterns/: fraud_ring.py  sim_swap_sequence.py
data_generation/generators/: banking.py  sa_identity.py  transactions.py
data_generation/scripts/: generate_training_data.py  validate_dataset.py
explainability/: gnn_explainer.py  llm_narrative.py
infra/: prometheus.yml
infra/terraform/: ecs.tf  elasticache.tf  iam.tf  main.tf  msk.tf  outputs.tf  s3.tf  variables.tf  vpc.tf
models/federated/: __init__.py  bank_partitioner.py  client.py  dp_strategy.py  server.py  simulate.py
models/federated/artifacts/: federated_best.pt
models/gnn/: dataset.py  model.py  train.py  tune.py
models/gnn/artifacts/: gnn_model.pt
models/gnn/artifacts_best/: gnn_model.pt
models/gnn/artifacts_tuning/hd64_dr0.2_lr0.0001/: gnn_model.pt
models/gnn/artifacts_tuning/hd64_dr0.2_lr0.0005/: gnn_model.pt
models/gnn/artifacts_tuning/hd64_dr0.2_lr0.001/: gnn_model.pt
models/gnn/artifacts_v2/: gnn_model.pt
models/sim_swap/: features.py  model.py  train.py
models/sim_swap/artifacts/: feature_names.json  model.txt
monitoring/: drift_detector.py  metrics.py
monitoring/dashboards/: dashboards.yaml  fraud_shield.json
notebooks/: 01_graph_exploration.ipynb  02_sim_swap_model.ipynb
scripts/: patch_fraud_loadshedding.py  test_model.py  test_payload.json
shared/: constants.py  feature_store.py  schemas.py
shared/utils/: load_shedding.py  sa_validators.py
streaming/: __init__.py  velocity_checker.py
streaming/consumers/: __init__.py  transaction_consumer.py
streaming/kafka/: __init__.py  producer.py
tests/: conftest.py
tests/e2e/: test_score_flow.py
tests/integration/: test_api.py
tests/unit/: test_drift_detector.py  test_load_shedding.py  test_sa_validators.py  test_schemas.py
(+6 files in other folders)
