[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sa-fraud-shield"
version = "0.1.0"
description = "Production-grade SA fraud detection: GNN + streaming + federated learning + POPIA-compliant XAI"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch==2.3.1",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.0.0",
    "shap>=0.44.0",
    "numpy>=1.26.0,<2.0",
    "scipy>=1.13.0",

    # Data
    "pandas>=2.2.0",
    "pyarrow>=12.0.0,<16",
    "faker>=25.0.0",

    # Streaming
    "faust-streaming==0.10.14",
    "aiokafka>=0.8.0,<0.9.0",
    "confluent-kafka>=2.4.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",

    # Federated learning
    "flwr>=1.9.0",

    # MLOps
    "mlflow>=2.14.0,<3.0",

    # Explainability
    "litellm==1.42.1",

    # Infrastructure
    "boto3==1.34.144",

    # Utilities
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "structlog==24.2.0",
    "tenacity==8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "testcontainers==4.7.1",
    "ruff==0.5.0",
    "mypy==1.10.1",
    "pre-commit==3.7.1",
    "ipykernel==6.29.5",
    "jupyter==1.0.0",
]
gnn = [
    # Install via: pip install torch-geometric -f https://data.pyg.org/whl/torch-2.3.1+cpu.html
    "torch-geometric==2.5.3",
    "captum==0.7.0",
]

[project.scripts]
generate-data = "data_generation.scripts.generate_training_data:main"
validate-data = "data_generation.scripts.validate_dataset:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-omit=tests/*,notebooks/*"

[tool.hatch.build.targets.wheel]
packages = ["shared", "data_generation", "models", "streaming", "api", "explainability", "monitoring"]
